// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders default 1`] = `
.emotion-0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 0;
  column-gap: 0;
  row-gap: 0;
}

.emotion-0>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-right: 0;
  }
}

@supports not (row-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-bottom: 0;
  }
}

<div
  className="emotion-0"
  data-cy="flex"
>
  <FlexItem
    flex="grow"
  >
    content
  </FlexItem>
  <FlexItem
    flex="grow"
  >
    content
  </FlexItem>
</div>
`;

exports[`Flex renders with all props 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 0;
  column-gap: 0;
  row-gap: 24px;
}

.emotion-0>div {
  width: 100%;
}

@supports not (column-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-right: 0;
  }
}

@supports not (row-gap: 1px) {
  .emotion-0>*:not(:last-child) {
    padding-bottom: 24px;
  }
}

<div
  className="emotion-0"
  data-cy="flex"
>
  <FlexItem
    flex="grow"
  >
    content
  </FlexItem>
  <FlexItem
    flex="grow"
  >
    content
  </FlexItem>
</div>
`;

exports[`Flex renders with responsive props 1`] = `
@media (min-width: 900px) {
  .emotion-0 {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

@media (min-width: 900px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    height: 100%;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    height: auto;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    -webkit-box-flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (min-width: 0) {
  .emotion-0>div {
    width: 100%;
  }
}

@media (min-width: 900px) {
  .emotion-0>div {
    width: auto;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    -webkit-column-gap: 0;
    column-gap: 0;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    -webkit-column-gap: 16px;
    column-gap: 16px;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    row-gap: 12px;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    row-gap: 0;
  }
}

@supports not (column-gap: 1px) {
  @media (min-width: 0) {
    .emotion-0>*:not(:last-child) {
      padding-right: 0;
    }
  }

  @media (min-width: 900px) {
    .emotion-0>*:not(:last-child) {
      padding-right: 16px;
    }
  }
}

@supports not (row-gap: 1px) {
  @media (min-width: 0) {
    .emotion-0>*:not(:last-child) {
      padding-bottom: 12px;
    }
  }

  @media (min-width: 900px) {
    .emotion-0>*:not(:last-child) {
      padding-bottom: 0;
    }
  }
}

<div
  className="emotion-0"
  data-cy="flex"
>
  <FlexItem
    flex="grow"
  >
    content
  </FlexItem>
  <FlexItem
    flex="grow"
  >
    content
  </FlexItem>
</div>
`;
